Added delivery cancel endpoint
