# swagger.yaml
@@ -1,13 +1,13 @@
 swagger: '2.0'
 info:
-  description: Move your app forward with the Snabb API.
+  description: Move your app forward with the Snabb API
   version: 1.0.0
   title: Snabb API
   contact:
     name: Snabb Dev Systems
     url: developers.snabb.io
     email: dev.systems@snabb.io
-host: snabb-api-mock.herokuapp.com
+host: 'localhost:5000'
 schemes:
   - http
 basePath: /api/v1
@@ -553,6 +553,37 @@ paths:
                     state: 1
                     estimatedCompletionTime: 1488303586404
               status: en_route_to_pickup
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+      x-swagger-router-controller: Delivery
+  /deliveries/cancel:
+    post:
+      tags:
+        - Delivery
+      summary: POST /deliveries/cancel
+      operationId: deliveryCancelPOST
+      description: Cancel an ongoing delivery.
+      security:
+        - OauthApplicationSecurity:
+            - api
+      consumes:
+        - application/x-www-form-urlencoded
+      parameters:
+        - name: delivery_id
+          in: formData
+          description: >-
+            ID of the delivery to cancel. A delivery will be able to be
+            cancelled at any time. Take into account that after certain
+            scenarios, a cancellation fee will be applied. Please read carefully
+            the cancellation info provided in the API docs.
+          required: true
+          type: string
+          x-example: 8b58bc58-7352-4278-b569-b5d24d8e3f76
+      responses:
+        '204':
+          description: Empty response when the delivery has been cancelled correctly.
         default:
           description: Unexpected error
           schema:
